syntax = "proto3";

package zoncoen.api.grpc;

import "google/protobuf/descriptor.proto";
option go_package = "github.com/zoncoen/grpc-error-annotation/gen/annotation/api/grpc;grpc";

extend google.protobuf.MethodOptions {
    Error error = 56789;
}

message Error {
    ErrorCode cancelled = 1;
    ErrorCode unknown = 2;
    ErrorCode invalid_argument = 3;
    ErrorCode deadline_exceeded = 4;
    ErrorCode not_found = 5;
    ErrorCode already_exists = 6;
    ErrorCode permission_denied = 7;
    ErrorCode unauthenticated = 16;
    ErrorCode resource_exhausted = 8;
    ErrorCode failed_precondition = 9;
    ErrorCode aborted = 10;
    ErrorCode out_of_range = 11;
    ErrorCode unimplemented = 12;
    ErrorCode internal = 13;
    ErrorCode unavailable = 14;
    ErrorCode data_loss = 15;
}

message ErrorCode {
    string description = 1;
}
